# prefect-orchestration

./: .gitignore  .prefectignore  README.md  prefect.yaml  pyproject.toml  req.txt  requirements.txt
.prefect/: flows.json
sql_files/: 1_role_schema_trigger_func_creation.sql  2_define_default_privileges.sql  3_grant_privileges.sql  4_yahoo_json_tables.sql  5_yahoo_data_tables.sql  6_public_tables.sql  9_indicies_creation.sql  public_foreign_keys.sql  public_table.sql  public_trigger.sql  role_db_creations.sql  yahoo_data_table.sql  yahoo_json_table.sql
sql_files/stored_procs/: delete_duplicate_data.sql
sql_files/supabase_stored_procs/: delete_duplicate_data.sql
sql_files/views/public/: 1__create_all_views.sql  draft.sql  draft_metadata.sql  draft_picks.sql  draft_picks_player_metadata.sql  draft_settings.sql  league.sql  league_brackets_losers.sql  league_brackets_postseason.sql  league_brackets_winners.sql  league_drafts.sql  league_matchups.sql  league_matchups_team.sql  league_matchups_team_roster.sql  league_rosters.sql  league_rosters_metadata.sql  league_rosters_team.sql  league_scoring_settings.sql  league_scoring_settings_unpivoted.sql  league_settings.sql  league_transaction.sql  league_transactions.sql  league_user.sql  league_users.sql  nfl_state.sql  player_data.sql  players.sql
sql_files/views/yahoo_data/: leagues.sql  matchups.sql  player_stats.sql  weekly_rankings.sql
src/prefect_orchestration/: __init__.py  main.py
src/prefect_orchestration/modules/: blocks.py  prefect_blocks.py  tasks.py  utils.py
